sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

12-09-2015 14:03:
F:\git\h5-gulp-webpack\.sublime-gulp-tmp.js:13
var pngquant = require('imagemin-pngquant'),
^^^

SyntaxError: Unexpected token var
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:434:26)


12-09-2015 14:03:
F:\git\h5-gulp-webpack\.sublime-gulp-tmp.js:13
var pngquant = require('imagemin-pngquant'),
^^^

SyntaxError: Unexpected token var
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:434:26)


12-09-2015 14:04:
F:\git\h5-gulp-webpack\.sublime-gulp-tmp.js:13
var pngquant = require('imagemin-pngquant'),
^^^

SyntaxError: Unexpected token var
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:434:26)


12-09-2015 14:04:
F:\git\h5-gulp-webpack\.sublime-gulp-tmp.js:13
var pngquant = require('imagemin-pngquant'),
^^^

SyntaxError: Unexpected token var
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:434:26)


12-09-2015 14:04:
F:\git\h5-gulp-webpack\.sublime-gulp-tmp.js:13
var pngquant = require('imagemin-pngquant'),
^^^

SyntaxError: Unexpected token var
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:434:26)


12-09-2015 14:05:
F:\git\h5-gulp-webpack\.sublime-gulp-tmp.js:13
var pngquant = require('imagemin-pngquant'),
^^^

SyntaxError: Unexpected token var
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:413:25)
    at Object.Module._extensions..js (module.js:452:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\Administrator\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:434:26)
